Fixing spacing for sideoption buttons on ios.

--- a/clients/ios/static/storyDetailView.css
+++ b/clients/ios/static/storyDetailView.css
@@ -615,7 +615,12 @@ a.NB-show-profile {
 .NB-button div {
     padding: 2px 6px 2px;
     height: 16px;
-
+    background: -webkit-gradient(
+        linear, left top, left bottom,
+        from(#E9AF86),
+        color-stop(0.50, #E9AF86),
+        color-stop(0.50, #E5A87F),
+        to(#E5A87F));
     border: 1px solid transparent;
     border-color: rgba(255, 255, 255, .3) rgba(0, 0, 0, .2) rgba(0, 0, 0, .3) rgba(255, 255, 255, .2);
     border-radius: 2px;
@@ -630,7 +635,7 @@ a.NB-show-profile {
         to(#E5E6E2));
     color: #B0B2AB;
     text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-    line-height: 1.5em;
+    line-height: 18px;
 }
 .NB-button:active div,
 .NB-button.NB-button-active div {
@@ -667,7 +672,7 @@ a.NB-show-profile {
 }
 
 .NB-button.NB-share-button .NB-icon {
-    background: url("share.png") no-repeat 0 -1px;
+    background: url("share@2x.png") no-repeat 0 -1px;
     background-size: 16px;
     width: 25px;
     display: inline-block;
@@ -678,13 +683,19 @@ a.NB-show-profile {
 }
 
 .NB-button.NB-train-button .NB-icon {
-    background: url("train.png") no-repeat 0 -1px;
+    background: url("train@2x.png") no-repeat 0 -1px;
     background-size: 16px;
 }
 
 .NB-button.NB-save-button .NB-icon {
-    background: url("clock.png") no-repeat 0 -1px;
+    background: url("clock@2x.png") no-repeat 0 -1px;
     background-size: 16px;
+}
+
+.NB-iphone .NB-button.NB-share-button .NB-icon {
+    background-position-y: 1px;
+    width: 20px;
+    margin-left: -2px;
 }
 
 .NB-iphone .NB-button .NB-story-comment-like-button-wrapper,
